--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             background-size: cover;
             height: 100vh;
         }
+        img{
+           width: 7%;
+        }
     </style>
 </head>
 
